<resources>
    <string name="app_name">PastillApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tomas">Tomas</string>
    <string name="menu_stocks">Stocks</string>
    <string name="contrasenya">Contraseña</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="uso">Uso</string>
    <string name="url">url</string>
    <string name="imagen">Imagen</string>
    <string name="stock2">stock</string>

    <string name="guardar">Guardar</string>
    <string name="username">Nombre de usuario</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="cancelar">Cancelar</string>


    <string name="introduce_el_nombre">Introduce el nombre</string>
    <string name="show_stock2">%2.2f €</string>
    <string name="externo">Enlace externo</string>
    <string name="establecer_nombre">Debes poner un nombre</string>
    <string name="rellenar_campos">Debes rellenar todos los campos</string>

    <string name="contrasenyas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="error_crear_usuario">Error al crear el usuario</string>
    <string name="medicacion_existe">El nombre ya existe</string>
    <string name="eliminar">Eliminar</string>
</resources>