<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newMedicacion.NewMedicacionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Nombre"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_uso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/uso"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/til_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_uso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/url"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/til_uso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_url"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_imagen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/imagen"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/til_url">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_imagen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_stock2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/stock2"
                app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/til_imagen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_stock2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_default"
                android:text="@string/guardar"
                 app:layout_constraintEnd_toEndOf="@id/guideline_vertical_90"
                app:layout_constraintTop_toBottomOf="@id/til_stock2"
                />

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/double_default"
                android:text="@string/eliminar"
                android:backgroundTint="@color/md_theme_dark_errorContainer"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_10"
                app:layout_constraintTop_toBottomOf="@id/til_stock2" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>